<resources>
    <string name="app_name">tenten</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_message">어디든지 이동할 수 있는\n팝업카(pop-up-car) 참여 플랫폼, 콜팝</string>
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_login">로그인</string>
    <string name="login_sign_up">회원가입</string>
    <string name="login_find_my_account">아이디·비밀번호 찾기</string>
    <string name="login_copyright">Copyright ⓒ TenTen All rights Reserved.</string>
</resources>