<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo_icon"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/loginMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/loginLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/loginIdEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edittext_login_rectangle_round"
            android:hint="@string/login_id"
            android:textColorHint="#CDC2F3"
            android:textColor="#F0EDFC"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/loginMessage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_login_rectangle_round"
            android:hint="@string/login_password"
            android:textColorHint="#CDC2F3"
            android:textColor="#F0EDFC"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/loginIdEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginLoginButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/login_login"
            android:textSize="18dp"
            android:textColor="#7E5EED"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_login_rectangle_round"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordEditText"
            app:layout_constraintLeft_toLeftOf="@id/loginIdEditText"
            app:layout_constraintRight_toRightOf="@id/loginIdEditText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/loginLoginButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginSignUpButton"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/login_sign_up"
                android:textColor="#DBDBDB"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/loginTextPartition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  |  "
                android:textColor="#FFFFFF"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginFindMyAccount"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/login_find_my_account"
                android:textSize="12dp"
                android:textColor="#DBDBDB"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loginCopyrightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login_copyright"
        android:textSize="12dp"
        android:textColor="#999999"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>